--- a/src/index.css
+++ b/src/index.css
@@ -15,4 +15,9 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
